--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "daisyui": "^4.11.1",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.3.1",
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^4.12.2",
     "tailwindcss": "^3.4.3"
   }
 }
